--- a/libs.conf
+++ b/libs.conf
@@ -1,3 +1,3 @@
-com.github.austinv11$Discord4J$2.8.4
+com.github.austinv11$Discord4J$dev-SNAPSHOT
 ch.qos.logback$logback-classic$1.2.3
 com.vdurmont$emoji-java$3.2.0
