--- a/libs.conf
+++ b/libs.conf
@@ -1,3 +1,4 @@
 com.github.austinv11$Discord4J$dev-SNAPSHOT
 ch.qos.logback$logback-classic$1.2.3
 com.vdurmont$emoji-java$3.2.0
+com.github.kennedyoliveira$pastebin4j$1.2.1
