--- a/libs.conf
+++ b/libs.conf
@@ -1,3 +1,6 @@
-com.github.austinv11$Discord4J$dev-SNAPSHOT
+com.github.austinv11$Discord4J$2.9.1
 ch.qos.logback$logback-classic$1.2.3
-com.vdurmont$emoji-java$3.2.0
+com.vdurmont$emoji-java$3.3.0
+com.github.kennedyoliveira$pastebin4j$1.2.1
+org.bouncycastle$bcprov-jdk15on$1.58
+mysql$mysql-connector-java$6.0.6
